--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
     <surefire.redirectTestOutputToFile>true</surefire.redirectTestOutputToFile>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- version properties -->
-    <cdap.version>6.1.1</cdap.version>
-    <hydrator.version>2.3.5</hydrator.version>
+    <cdap.version>6.6.0</cdap.version>
+    <hydrator.version>2.7.0</hydrator.version>
     <hadoop.version>2.8.0</hadoop.version>
     <httpcomponents.version>4.5.9</httpcomponents.version>
     <guava.retrying.version>2.0.0</guava.retrying.version>
@@ -256,7 +256,7 @@
 
     <dependency>
       <groupId>io.cdap.cdap</groupId>
-      <artifactId>cdap-data-pipeline</artifactId>
+      <artifactId>cdap-data-pipeline2_2.11</artifactId>
       <version>${cdap.version}</version>
       <scope>test</scope>
     </dependency>
