Zendesk data validation

--- a/src/e2e-test/resources/pluginParameters.properties
+++ b/src/e2e-test/resources/pluginParameters.properties
@@ -6,7 +6,7 @@ admin.apitoken = ZENDESK_API_TOKEN
 admin.subdomain = cloudsufi
 objectstopull.group=Groups
 hierarchical.objectstopull.ticketcomments=Ticket Comments
-multisource.objectstopull = Ticket Comments, Groups
+multisource.objectstopull =Ticket Comments, Groups
 start.date=2022-07-01T15:01:01Z
 end.date=2022-08-01T15:01:01Z
 
@@ -35,7 +35,7 @@ userTestOutputFile=testdata/expected_outputs/File_User_Output1.txt
 groupsTestOutputFile=testdata/expected_outputs/SingleObject_Groups.txt
 ticketCommentsOutputFile=testdata/expected_outputs/SingleObject_TicketComments.txt
 multiObjectsOutputFile=testdata/expected_outputs/MultiObjects_File1.txt
-
+multiObjectsOutputFile1=testdata/expected_outputs/MultiObjects_File2.txt
 #Heirarchical Schema
 heirarchicalschema.articlecomments=[{"key":"id","value":"long"},{"key":"fileName","value":"string"},\
   {"key":"contentUrl","value":"string"},{"key":"url","value":"string"},\
